<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetPassActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/passwordResetIcon"
        android:layout_width="411dp"
        android:layout_height="107dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/password_reset"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/accountNameTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="87dp"
        android:text="@string/enter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetIcon" />

    <EditText
        android:id="@+id/accountName"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountNameTip" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonNextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="70dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arrowicon" />

</androidx.constraintlayout.widget.ConstraintLayout>