<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageViewLogIn"
        android:layout_width="259dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginicon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewEnterNameTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:text="@string/enter_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogIn" />

    <EditText
        android:id="@+id/editTextAccountName"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="1dp"
        android:autofillHints="@string/name_hint"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterNameTip" />

    <TextView
        android:id="@+id/textViewPasswordTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="26dp"
        android:text="@string/enter_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordTip" />

    <TextView
        android:id="@+id/errormessage"
        android:layout_width="245dp"
        android:layout_height="36dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#F2F2F2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errormessage"
        app:srcCompat="@drawable/arrowicon"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>