<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordResetActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="102dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/password_reset" />

    <TextView
        android:id="@+id/newPasswordTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:text="@string/new_password_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordTip" />

    <TextView
        android:id="@+id/reEnterPasswordTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="72dp"
        android:text="@string/re_enter_password_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <EditText
        android:id="@+id/reEnterPassword"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:hint="@string/re_enter_password_hint"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordTip" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reEnterPassword" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CancelButton"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>